Small style fixes in tabs collapse transitions

--- a/src/sass/_collapse.sass
+++ b/src/sass/_collapse.sass
@@ -2,10 +2,10 @@
   .sidebar--collapse
     .tab-item
       width: 72px
-      padding-left: 1rem
+      padding-left: 0
       padding-right: 1rem
-      .tab-title
-        margin-left: 0
+    .tab-plus
+      padding-left: 1rem
     .main-header__title
       opacity: 0
       width: 0
